--- a/template/home.hbs
+++ b/template/home.hbs
@@ -20,7 +20,7 @@
             <p class="profile-info">Customize ChatGPT</p>
             <p class="profile-info">Settings</p>
             <p class="profile-info">Upgrade Plan</p>
-            <p class="profile-info" onclick="window.location.href='/logout' ">Log out</p>
+            <p class="profile-info" onclick="window.location.href='/signin/logout' ">Log out</p>
         </div>
     </div>
 
