--- a/template/signin.hbs
+++ b/template/signin.hbs
@@ -28,10 +28,10 @@
                 <input placeholder="Password" name="password" type="password" id="password" required style="padding-right: 4px;">
                 <button type="button" onclick="togglePassword()" id="toggleButton">Show</button>
             </div>
-            <input class="sub" type="submit" value="Signup">
+            <input class="sub" type="submit" value="Signin">
             <p id="message"></p>
             <p style="display: inline;">don't have an account?</p>
-            <a href="/signup">signin</a>
+            <a href="/signup">signup</a>
         </form>
     </div>
 
