--- a/public/home.css
+++ b/public/home.css
@@ -1,47 +1,6 @@
-html, body {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-margin: 0;
-padding: 0;
-}
-
-header {
-  margin-top:-20px;
-height: 85px; 
-background-color: rgb(255, 255, 255);
-position: fixed;
-display:flex;
-width: 100%;
-box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
-}
-.logobar{
-  flex: 1;
-
-}
- .navbar {
-    flex: 1;
-  
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.navbar ul {
-  display: flex;
-  list-style: none;
-}
-
-.navbar ul li a{
-  font-size: 16px;
-  margin-right: 20px; /* Space between each item */
-  text-decoration: none;
-  color: black;
-}
-.navbar ul li a:hover {
-  text-decoration: underline;
-}
 
 #dashBoard {
-  max-width: 600px; /* Limit the width of the dashboard */
+  max-width: 400px; /* Limit the width of the dashboard */
   margin: 20px auto; /* Center the dashboard horizontally */
   padding: 20px; /* Add padding inside the dashboard */
   background-color: #fff; /* White background for contrast */
@@ -49,80 +8,6 @@ box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
-/* Profile dropdown styling */
-#profileButtonContainer {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-#profile {
-  display: none;
-  position: absolute;
-  top: 40px;
-  right: 0;
-  background-color: #fff;
-  width: 150px;
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-  text-align: left;
-  z-index: 1000;
-}
-
-#profileButton {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 16px;
-}
-  .profile-info {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 16px;
-}
-
-/* Button styling */
-button {
-  margin: 5px;
-}
-
-/* Profile information text style */
-.profile-info {
-  color: #333;
-}
-
-
-
-@media (max-width: 768px) {
-  img{
-    width:200px;
-  }
-
-  header {
-    flex-direction: column;
-    height: 120px;
-    }
-    .logobar{
-      flex: 1;
-      display: flex;
-      justify-content: center;
-    }
-     .navbar {
-        height:30px;
-        flex: 1;
-        display: flex;
-        justify-content: center;
-    }
-    
-
-    
-    .navbar ul li a{
-      font-size: 15px;
-    
-    }
- 
-
-
+#home-div{
+  margin-top: 100px;
 }
