pushing merged changed from dashhboard branch

--- a/public/partials/homeHeader.hbs
+++ b/public/partials/homeHeader.hbs
@@ -101,7 +101,7 @@ top:0px;
         <li><a href='/fetch-expenses'>Manage Expense</a></li>
         <li>
           <a href="javascript:void(0)" id="profileButton" onclick="showProfile()">
-            <img id="menu-img" src="images/menu.png" width="26px">
+            <img id="menu-img" src="images/menu.png" width="26px" border="solid" height="30px">
           </a></li>
       </ul>
     </div>
