--- a/public/partials/homeHeader.hbs
+++ b/public/partials/homeHeader.hbs
@@ -62,7 +62,7 @@ top:0px;
 
 
 @media (max-width: 768px) {
-  img{
+  #logo-img{
     width:200px;
   }
 
@@ -85,13 +85,32 @@ top:0px;
       font-size: 15px;
     
     }
+    #menu-img{
+      width: 20px;
+    }
+#profile {
+  position: relative;
+  top: 120px;
+  width: 100%;
+  border-radius: 0px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  text-align: center;
+}
+
+.profile-info {
+  padding: 5px;
+  margin: 0px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
 }
 
 </style>
 <header>
     <div class="logobar">
       <a href="{{homeLink}}">
-      <img src="images/moneymind2.png" alt="Money Mind Logo" width="200px;">
+      <img id="logo-img" src="images/moneymind2.png" alt="Money Mind Logo" width="200px;">
       </a>
     </div>
     <div class="navbar">
@@ -101,7 +120,7 @@ top:0px;
         <li><a href='/fetch-expenses'>Manage Expense</a></li>
         <li>
           <a href="javascript:void(0)" id="profileButton" onclick="showProfile()">
-            <img id="menu-img" src="images/menu.png" width="26px" border="solid" height="30px">
+            <img id="menu-img" src="images/menu.png" width="26px">
           </a></li>
       </ul>
     </div>
