--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,17 +1,27 @@
 
+#home-div{
+  margin-top: 100px;
+  display: flex;
+}
 #dashBoard {
-  position: fixed;
+  display: inline-block;
   left: 10px;
   max-width: 250px; /* Limit the width of the dashboard */
-  margin: 20px auto; /* Center the dashboard horizontally */
+  margin: 20px;
   padding: 20px; /* Add padding inside the dashboard */
   background-color: #fff; /* White background for contrast */
   border-radius: 8px; /* Rounded corners */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
-#home-div{
-  margin-top: 100px;
+#debitSection {
+  display: inline-block;
+  max-width: 250px; /* Limit the width of the dashboard */
+  margin: 20px;
+  padding: 20px; /* Add padding inside the dashboard */
+  background-color: #fff; /* White background for contrast */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
 @media (max-width: 768px) {
@@ -19,13 +29,39 @@
     margin-top: 150px;
   }
   #dashBoard {
-    position: fixed;
-    left: 50%; /* Start the dashboard from the center */
-    transform: translateX(-50%); /* Shift it back by half its width for centering */
-    width: 75%;
-    padding: 0px; /* Padding inside the dashboard */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    max-width: 180px; /* Limit the width of the dashboard */
+  }
+  
+  #debitSection {
+    max-width: 180px; /* Limit the width of the dashboard */
+  }
 }
 
-  
+
+
+
+#debitSection h3 {
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #333;
+}
+
+#debitSection button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+#debitSection button:hover {
+  background-color: #0056b3;
+}
+
+#lastDebitsList li {
+  margin: 5px 0;
+  font-size: 16px;
+  color: #555;
 }
