--- a/public/partials/homeHeader.hbs
+++ b/public/partials/homeHeader.hbs
@@ -46,6 +46,7 @@ top:0px;
   top: 80px;
   right: 10px;
   width: 150px;
+   background-color: white;
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
@@ -54,7 +55,7 @@ top:0px;
 
   .profile-info {
   cursor: pointer;
-  font-size: 16px;
+  font-size: 17px;
 }
 .profile-info:hover {
   text-decoration: underline;
@@ -92,6 +93,7 @@ top:0px;
   position: relative;
   top: 120px;
   width: 100%;
+  background-color: white;
   border-radius: 0px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -116,8 +118,8 @@ top:0px;
     <div class="navbar">
       <ul>
         <li><a href="{{homeLink}}">Home</a></li>
-        <li><a href='/add-expense'>Add Expense</a></li>
-        <li><a href='/fetch-expenses'>Manage Expense</a></li>
+        <li><a href='/add-expense'>Add Transaction</a></li>
+        <li><a href='/fetch-expenses'>Manage Transaction</a></li>
         <li>
           <a href="javascript:void(0)" id="profileButton" onclick="showProfile()">
             <img id="menu-img" src="images/menu.png" width="26px">
@@ -134,7 +136,12 @@ top:0px;
             <p class="profile-info">Customize ChatGPT</p>
             <p class="profile-info">Settings</p>
             <p class="profile-info">Upgrade Plan</p> --}}
-            <p class="profile-info" onclick="window.location.href='/signin/logout' ">Log out</p>
+            <div id="logout-div">
+              <div id="logout-img" style="display:inline">
+                <img src="images/logout.png" width="17px">
+              </div>
+              <p style="display:inline;" class="profile-info" onclick="window.location.href='/signin/logout' ">Log out</p>
+            </div>
         </div>
 
 <script>
