added contollers for routes,script folder for client side scripting

--- a/public/partials/homeHeader.hbs
+++ b/public/partials/homeHeader.hbs
@@ -112,7 +112,7 @@ top:0px;
 <header>
     <div class="logobar">
       <a href="{{homeLink}}">
-      <img id="logo-img" src="images/moneymind2.png" alt="Money Mind Logo" width="200px;">
+      <img id="logo-img" src="/images/moneymind2.png" alt="Money Mind Logo" width="200px;">
       </a>
     </div>
     <div class="navbar">
@@ -122,7 +122,7 @@ top:0px;
         <li><a href='/fetch-expenses'>Manage Transaction</a></li>
         <li>
           <a href="javascript:void(0)" id="profileButton" onclick="showProfile()">
-            <img id="menu-img" src="images/menu.png" width="26px">
+            <img id="menu-img" src="/images/menu.png" width="26px">
           </a></li>
       </ul>
     </div>
@@ -138,9 +138,9 @@ top:0px;
             <p class="profile-info">Upgrade Plan</p> --}}
             <div id="logout-div">
               <div id="logout-img" style="display:inline">
-                <img src="images/logout.png" width="17px">
+                <img src="/images/logout.png" width="17px">
               </div>
-              <p style="display:inline;" class="profile-info" onclick="window.location.href='/signin/logout' ">Log out</p>
+              <p style="display:inline;" class="profile-info" onclick="window.location.href='/auth/logout' ">Log out</p>
             </div>
         </div>
 
