--- a/public/partials/landingHeader.hbs
+++ b/public/partials/landingHeader.hbs
@@ -80,15 +80,15 @@ box-shadow: 0px 0px 50px rgba(75, 73, 73, 0.1);
   
     <div class="logobar">
       <a href="{{homeLink}}">
-      <img src="images/moneymind2.png" alt="Money Mind Logo" width="250px">
+      <img src="/images/moneymind2.png" alt="Money Mind Logo" width="250px">
       </a>
     </div>
     <div class="navbar">
       <ul>
         <li><a href="{{homeLink}}">Home</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="/signin">Sign In</a></li>
-        <li><a href="/signup">Sign Up</a></li>
+        <li><a href="/auth/signin">Sign In</a></li>
+        <li><a href="/auth/signup">Sign Up</a></li>
         
       </ul>
     </div>
