--- a/public/views/addExpense.hbs
+++ b/public/views/addExpense.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expense</title>
-      <link rel="stylesheet" href="css/addExpense.css">
+      <link rel="stylesheet" href="/css/addExpense.css">
 </head>
 <body>
     
