--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Money Mind</title>
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="/css/landing.css">
 </head>
 <body id="home">
 
@@ -19,7 +19,7 @@
         <div>
             <h2>Managing Finances Made Easy</h2>
             <p>Create a new account and keep a track record of all your finances, transactions and subscriptions.</p>
-            <button class="cta-btn" onclick="window.location.href='/signin'">Get Started ></button>
+            <button class="cta-btn" onclick="window.location.href='/auth/signin'">Get Started ></button>
         </div>
     </section>
 
