--- a/public/partials/homeHeader.hbs
+++ b/public/partials/homeHeader.hbs
@@ -135,7 +135,8 @@ top:0px;
             {{!-- <p class="profile-info">My GPTs</p>
             <p class="profile-info">Customize ChatGPT</p>
             <p class="profile-info">Settings</p>
-            <p class="profile-info">Upgrade Plan</p> --}}
+             --}}
+            <p class="profile-info">Upgrade Plan</p>
             <div id="logout-div">
               <div id="logout-img" style="display:inline">
                 <img src="/images/logout.png" width="17px">
