--- a/public/partials/footer.hbs
+++ b/public/partials/footer.hbs
@@ -1,22 +1,31 @@
 <style>
     .footer{
-  background-color: #ebe4e4;
+  background-color: #1d0324;
   color: rgb(0, 0, 0);
   padding: 20px 0;
   text-align: center;
 }
 .footer a {
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
 }
 .footer a:hover {
-  color: #000000;
+  color: #ffffff;
 }
+p{
+  color:black;
+}
+.footer h3, 
+.footer p {
+  color: white;
+}
+
+
 </style>
 
 
 
-    <section id="services" class="footer">
+    <section class='footer' id="about">
         <h3>About Us</h3>
         <p>Expense Tracker is dedicated to helping you manage your finances with ease. Our mission is to make budgeting stress-free.</p>
     </section>
