--- a/public/views/signin.hbs
+++ b/public/views/signin.hbs
@@ -14,7 +14,7 @@
         homeLink="/" 
         
     }}
-
+    <img class='hero-left-img' src="/images/image-1.png" width="500px">
     <div class="container">
         
         <form id="signinform" style="display: block;">
@@ -72,6 +72,7 @@
             <a href="/auth/signin">signin</a>
         </form>
     </div>
+    <hr id="services" style="border: none; height: 2px; background-color: black;">
     {{> features}}
     {{> footer}}
 
