--- a/public/views/signup.hbs
+++ b/public/views/signup.hbs
@@ -11,7 +11,7 @@
   {{>landingHeader
     homeLink='/'
   }}
-
+<img class='hero-left-img' src="/images/image-1.png" width="500px">
 <div class="container">
   <form id="signupForm">
     <h2>Signup to MoneyMind</h2>
@@ -55,7 +55,7 @@
   </form>
   
   </div>
-
+  <hr id="services" style="border: none; height: 2px; background-color: black;">
   {{>features}}
   {{>footer}}
 
