--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -23,18 +23,26 @@ input{
 }
 
 .container {
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
+  display: inline-block;
+  position:relative;
+  top:180px;
+  margin-bottom: 160px;
+  height: 400px;
+  width:1000px;
+  font-family: "Space Grotesk", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;  
 }
 
 form {
   width: 270px;
-  margin-top: 160px;
+  position: absolute;
+  top: 50%;  /* Centers vertically */
+  left: 50%; /* Centers horizontally */
+  transform: translate(-50%, -50%);  /* Offsets the element by its width and height to center it */
   padding: 20px;
-  box-shadow: 1px 1px 8px rgb(205, 201, 201);
+  box-shadow: 2px 1px 20px #20D982;
 }
 
 .toggle{
@@ -48,4 +56,11 @@ form {
   padding: 0;
   font-size: 14px;
   color: #333;
+}
+.hero-left-img{
+  top:180px;
+  margin-top: 300px;
+  border:solid;
+  border-color: solid;
+  display: inline-block;
 }
