--- a/public/partials/landingHeader.hbs
+++ b/public/partials/landingHeader.hbs
@@ -1,71 +1,83 @@
 <style>
   body{
+    background-color: black;
     margin: 0;
     font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-  header {
-    position: fixed;
-  top: 0;
-height: 110px; 
-background-color: rgb(255, 255, 255);
-display:flex;
-width: 100%;
-box-shadow: 0px 0px 50px rgba(75, 73, 73, 0.1);
-}
-.logobar{
-  flex: 1;
-
-}
- .navbar {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.navbar ul {
-  display: flex;
-  list-style: none;
-}
-
-.navbar ul li a{
-  font-size: 20px;
-  margin-right: 20px; /* Space between each item */
-  text-decoration: none;
-  color: black;
-}
-.navbar ul li a:hover {
-  text-decoration: underline;
-}
-
-@media (max-width: 768px) {
-  img{
-    width:200px;
+    font-weight: 100;
+    font-style: normal;
   }
 
   header {
-    flex-direction: column;
-    height: 120px;
-    }
-    .logobar{
-      flex: 1;
-      display: flex;
-      justify-content: center;
-    }
-     .navbar {
-        height:30px;
-        flex: 1;
-        display: flex;
-        justify-content: center;
-    }
-    
+    position: fixed;
+    top: 0px;
+    height: 70px; 
+    background-color: rgb(20, 19, 19);
+    display:flex;
+    width: 100%;
+    box-shadow: 2px 1px 20px #20D982;
 
+  }
+  .header-left{
+    flex: 1;
+  }
+ .header-middle ,.header-right{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header-right{
+  justify-content: flex-end;
+}
+
+
+.header-middle ul,.header-right ul {
+  display: flex;
+  list-style: none;
+}
+.header-middle li a{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  margin: 20px; 
+
+}
+.header-middle li a:hover{
+  color: rgb(255, 255, 255,0.5);
+}
+.header-right li a{
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: solid;
+  border-color: #20D982;
+  background-color: rgba(32, 217, 130, 0.1);
+  border-radius: 100px;
+  border-width: 1.5px;
+  font-size: 15px;
+  margin: 20px; 
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+.header-right li a:hover{
+  background-color:  #20D982;
+  color: black;
+}
+
+#logo-img{
+  left:20px;
+  top:10px;
+  position: relative;
+  width:200px;
+}
+
+
+@media (max-width: 768px) {
+     .header-middle,.header-right{
+        height:15px;
+    }
     
-    .navbar ul li a{
-      font-size: 15px;
+    .header-middle li a,.header-right li a{
+      font-size: 10px;
     
     }
  
@@ -77,21 +89,25 @@ box-shadow: 0px 0px 50px rgba(75, 73, 73, 0.1);
 
 
 <header>
+  <div class="header-left">
+    <a href="{{homeLink}}">
+    <img id="logo-img" src="/images/new_logo_2.png" alt="Money Mind Logo">
+    </a>
+  </div>
+ 
+  <div class="header-middle">
+    <ul>
+      <li><a href="{{homeLink}}">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+    </ul>
+  </div>
+
+  <div class="header-right">
+    <ul>
+      <li><a href="/auth/signin">Sign In</a></li>
+      <li><a href="/auth/signup">Register</a></li>
+    </ul>
+  </div>  
   
-    <div class="logobar">
-      <a href="{{homeLink}}">
-      <img src="/images/moneymind2.png" alt="Money Mind Logo" width="250px">
-      </a>
-    </div>
-    <div class="navbar">
-      <ul>
-        <li><a href="{{homeLink}}">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="/auth/signin">Sign In</a></li>
-        <li><a href="/auth/signup">Sign Up</a></li>
-        
-      </ul>
-    </div>
-  
-  <hr>
 </header>
