--- a/public/views/landing.hbs
+++ b/public/views/landing.hbs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Money Mind</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/landing.css">
 </head>
 <body id="home">
@@ -14,15 +17,14 @@
     {{> landingHeader
         homeLink="#home" 
     }}
-
-    <section class="hero-section">
-        <div>
-            <h2>Managing Finances Made Easy</h2>
-            <p>Create a new account and keep a track record of all your finances, transactions and subscriptions.</p>
-            <button class="cta-btn" onclick="window.location.href='/auth/signin'">Get Started ></button>
+    <img class='hero-left-img' src="/images/image-1.png" width="500px">
+        <div class="hero-section">
+            <h1>Effortless Financial Management at <span class="yellow">Your Fingertips </span> </h1>
+            <p>Create an account today and begin tracking all your expenses, </br>organizing transactions, and monitoring subscriptions in real time,</br> helping you stay in control of your financial health.</p>
+            <button class="cta-btn" onclick="window.location.href='/auth/signin'">Get Started Now</button>
         </div>
-    </section>
 
+<hr id="services" style="border: none; height: 2px; background-color: black;">
 
 {{> features}}
 
